--- a/Autosave Editor/index.html
+++ b/Autosave Editor/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <main id="app"></main>
-    <script src="./src/main.js" type="module"></script>
+    <script src="/src/main.js" type="module"></script>
     
 </body>
 </html>
