feat: 에디터 자동 저장기능 완성

--- a/Autosave Editor/index.html
+++ b/Autosave Editor/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <main id="app"></main>
+    <!-- main.js 상대경로, 절대경로 주의하기. npx serve -s -->
     <script src="/src/main.js" type="module"></script>
     
 </body>
